--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -55,46 +55,46 @@
 </div>
 
 
-<!--<nav class="site-nav">-->
-<!--    <div class="container">-->
-<!--        <div class="site-navigation">-->
-<!--            <a href="index.html" class="logo float-left m-0">DOONOON <span class="text-primary">.</span></a>-->
+<nav class="site-nav">
+    <div class="container">
+        <div class="site-navigation">
+            <a href="index.html" class="logo float-left m-0">DOONOON <span class="text-primary">.</span></a>
 
-<!--            <ul class="js-clone-nav d-none d-lg-inline-noone text-left site-menu">-->
-<!--                <li class="active"><a href="index.html">Home</a></li>-->
-<!--                <li class="has-children">-->
-<!--                    <a href="#">Pages</a>-->
-<!--                    <ul class="dropdown">-->
-<!--                        <li><a href="portfolio.html">Portfolio</a></li>-->
-<!--                        <li><a href="blog.html">Blog</a></li>-->
-<!--                        <li><a href="single.html">Single</a></li>-->
-<!--                        <li><a href="about.html">About</a></li>-->
-<!--                        <li><a href="contact.html">Contact</a></li>-->
+            <ul class="js-clone-nav d-none d-lg-inline-noone text-left site-menu">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li class="has-children">
+                    <a href="#">Pages</a>
+                    <ul class="dropdown">
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="single.html">Single</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
 
-<!--                        <li class="has-children">-->
-<!--                            <a href="#">Menu Two</a>-->
-<!--                            <ul class="dropdown">-->
-<!--                                <li><a href="#">Sub Menu One</a></li>-->
-<!--                                <li><a href="#">Sub Menu Two</a></li>-->
-<!--                                <li><a href="#">Sub Menu Three</a></li>-->
-<!--                            </ul>-->
-<!--                        </li>-->
-<!--                        <li><a href="#">Menu Three</a></li>-->
-<!--                    </ul>-->
-<!--                </li>-->
-<!--                <li><a href="portfolio.html">Portfolio</a></li>-->
-<!--                <li><a href="elements.html">Elements</a></li>-->
-<!--                <li><a href="about.html">About</a></li>-->
-<!--                <li><a href="contact.html">Contact Us</a></li>-->
-<!--            </ul>-->
+                        <li class="has-children">
+                            <a href="#">Menu Two</a>
+                            <ul class="dropdown">
+                                <li><a href="#">Sub Menu One</a></li>
+                                <li><a href="#">Sub Menu Two</a></li>
+                                <li><a href="#">Sub Menu Three</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Menu Three</a></li>
+                    </ul>
+                </li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="elements.html">Elements</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
 
-<!--            <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-block" data-toggle="collapse" data-target="#main-navbar">-->
-<!--                <span></span>-->
-<!--            </a>-->
+            <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-block" data-toggle="collapse" data-target="#main-navbar">
+                <span></span>
+            </a>
 
-<!--        </div>-->
-<!--    </div>-->
-<!--</nav>-->
+        </div>
+    </div>
+</nav>
 
 <div class="custom-hero">
     <div class="container">
